--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -122,6 +122,7 @@ dependencies {
     implementation project(":@react-native-community_netinfo")
     implementation project(":@react-native-community_async-storage")
     implementation project(":mendixnative-release")
+    implementation project(path: ':react-native-localize')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "org.webkit:android-jsc:r245459"
@@ -135,6 +136,7 @@ dependencies {
     devImplementation "me.dm7.barcodescanner:zxing:1.9.13"
     androidTestImplementation("com.wix:detox:+") { transitive = true } 
     androidTestImplementation "junit:junit:4.12"
+    
 }
 
 configurations.all {
