--- a/ios/Podfile
+++ b/ios/Podfile
@@ -43,8 +43,8 @@ abstract_target "ReactNative" do
 
   # Libs
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
-  pod 'RNGestureHandler', :podspec => '../node_modules/react-native-gesture-handler'
-  pod 'RNReanimated', :podspec => '../node_modules/react-native-reanimated'
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
   pod 'react-native-sqlite-storage', :path => '../node_modules/react-native-sqlite-storage'
   pod 'react-native-calendar-events', :path => '../node_modules/react-native-calendar-events'
   pod 'react-native-camera', :path => '../node_modules/react-native-camera', subspecs: [
@@ -55,13 +55,13 @@ abstract_target "ReactNative" do
   pod 'TouchID', :path => '../node_modules/react-native-touch-id'
   pod 'react-native-ble-plx', :path => '../node_modules/react-native-ble-plx'
   pod 'react-native-ble-plx-swift', :path => '../node_modules/react-native-ble-plx'
-  pod 'RNSound', :podspec => '../node_modules/react-native-sound'
-  pod 'react-native-video', :podspec => '../node_modules/react-native-video'
+  pod 'RNSound', :path => '../node_modules/react-native-sound'
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
   pod 'react-native-maps', :path => '../node_modules/react-native-maps'
   pod 'react-native-google-maps', :path => '../node_modules/react-native-maps'
   pod 'GoogleMaps'
   pod 'Google-Maps-iOS-Utils'
-  pod 'RNSVG', :podspec => '../node_modules/react-native-svg'
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
   pod 'react-native-webview', :path => '../node_modules/react-native-webview'
   pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
   pod 'RNInAppBrowser', :path => '../node_modules/react-native-inappbrowser-reborn'
