--- a/.github/workflows/android-build-custom-dev-app.yml
+++ b/.github/workflows/android-build-custom-dev-app.yml
@@ -13,14 +13,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: set up JDK
+        uses: actions/setup-java@v3
         with:
-          java-version: 1.8
+          distribution: 'temurin'
+          java-version: 11
       - name: actions/setup-node
         uses: actions/setup-node@v3
         with:
-          node-version: "14.18.2"
+          node-version: "16.14.2"
       - name: npm install
         run: npm ci
       - name: Add NDK 21.4.7075529
