--- a/android/build.gradle
+++ b/android/build.gradle
@@ -49,4 +49,10 @@ allprojects {
         }
         maven { url "https://packages.rnd.mendix.com/jcenter" }
     }
+    configurations.all {
+        resolutionStrategy {
+            // Can be removed when upgraded to any version 0.64.4+, as a proper fix is included in react-native itself.
+            force "com.facebook.react:react-native:0.61.5"
+        }
+    }
 }
