--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,15 +35,13 @@ allprojects {
     repositories {
         all { ArtifactRepository repo ->
             println repo.url.toString()
-            if (repo.url.toString().startsWith("https://jcenter.bintray.com/")) {
+            if (repo.url.toString().contains("jcenter.bintray.com") || repo.url.toString().contains("jitpack.io")) {
                 project.logger.warn "Repository ${repo.url} removed."
                 remove repo
+                google()
                 mavenCentral()
             }
         }
-        google()
-        mavenCentral()
-        maven { url "https://www.jitpack.io" }
         maven {
             url "$rootDir/../node_modules/react-native/android"
         }
@@ -51,12 +49,19 @@ allprojects {
             url "$rootDir/../node_modules/jsc-android/dist"
         }
         maven {
-            url "https://maven.fabric.io/public"
-        }
-        maven {
             url "$rootDir/../node_modules/detox/Detox-android"
         }
+        google()
+        mavenCentral {
+            content {
+                excludeGroup("com.facebook.react")
+            }
+        }
+        maven {
+            url "https://maven.fabric.io/public"
+        }
         maven { url "https://packages.rnd.mendix.com/jcenter" }
+        maven { url "https://www.jitpack.io" }
     }
     configurations.all {
         resolutionStrategy {
