--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@react-native-firebase/app": "17.3.0",
     "@react-native-firebase/messaging": "17.3.0",
     "@react-native-picker/picker": "2.4.8",
-    "@react-native/metro-config": "^0.73.5",
     "@react-navigation/native": "6.1.6",
     "react-native": "0.73.8",
     "react-native-device-info": "8.0.1",
@@ -31,20 +30,22 @@
     "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "3.1.8",
     "react-native-schedule-exact-alarm-permission": "^0.1.3",
-    "react-native-screens": "3.20.0",
+    "react-native-screens": "3.31.1",
     "react-native-splash-screen": "3.2.0",
     "react-native-svg": "12.1.0",
     "react-native-tab-view": "3.5.1",
     "react-native-vector-icons": "10.0.3",
-    "react-native-video": "5.2.1",
+    "react-native-video": "^6.1.2",
     "semver": "5.7.2"
   },
   "devDependencies": {
     "@babel/runtime": "^7.20.0",
     "@mendix/native-mobile-toolkit": "latest",
+    "@react-native/babel-preset": "^0.73.21",
+    "@react-native/metro-config": "^0.73.5",
     "detox": "19.13.0",
     "jetifier": "^1.6.3",
-    "@react-native/babel-preset": "0.73.21",
+    "metro-react-native-babel-preset": "0.76.8",
     "patch-package": "^8.0.0"
   },
   "engines": {
