--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "8.2.7",
   "private": true,
   "scripts": {
+    "preinstall": "node scripts/clean-unused-patches.js",
     "postinstall": "node patches/apply-patches.js && jetify",
     "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose"
   },
@@ -14,8 +15,6 @@
     "@react-native-community/datetimepicker": "3.0.3",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/push-notification-ios": "1.10.1",
-    "@react-native-firebase/app": "17.3.0",
-    "@react-native-firebase/messaging": "17.3.0",
     "@react-native-picker/picker": "2.4.8",
     "@react-native/metro-config": "^0.73.2",
     "@react-navigation/native": "6.1.6",
