--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose"
   },
   "dependencies": {
-    "@mendix/native": "4.0.1",
-    "@mendix/react-native-sqlite-storage": "^7.1.0",
+    "@mendix/native": "./mendix-native-4.0.2-beta.0.tgz",
+    "@op-engineering/op-sqlite": "7.4.0",
     "@react-native-community/async-storage": "1.12.1",
     "@react-native-community/cameraroll": "4.0.1",
     "@react-native-community/datetimepicker": "3.0.3",
@@ -63,5 +63,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.8"
+  },
+  "op-sqlite": {
+    "sqlcipher": true,
+    "performanceMode": "2"
   }
 }
