--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@mendix/native": "file:mendix-native-5.0.0-rc.0.tgz",
-    "@mendix/react-native-sqlite-storage": "^7.1.0",
+    "@op-engineering/op-sqlite": "8.0.2",
     "@react-native-async-storage/async-storage": "2.0.0",
     "@react-native-community/cameraroll": "4.0.1",
     "@react-native-community/datetimepicker": "8.2.0",
