--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "^11.3.2",
     "@react-native-community/push-notification-ios": "1.10.1",
+    "@react-native-firebase/app": "17.3.0",
+    "@react-native-firebase/messaging": "17.3.0",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/native": "6.1.6",
     "react-native": "0.73.8",
