--- a/ios/Podfile
+++ b/ios/Podfile
@@ -54,15 +54,13 @@ def common_pods
   pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
   pod 'Permission-PhotoLibrary', :path => "#{permissions_path}/PhotoLibrary"
 
-  # The pods listed in this section are essential for the application to function correctly.
-  # These pods are added by Native Builder UI (NBUI) and should not be modified under any circumstances.
-  # Do not make any changes to the pods in this section.
-  # REQUIRED PODS START
-
   # Required MendixNative dependency
   pod 'SSZipArchive'
 
-  # REQUIRED PODS END
+  # Required for Push notifications
+  pod 'Firebase', :modular_headers => true
+  pod 'FirebaseCore', :modular_headers => true
+  pod 'GoogleUtilities', :modular_headers => true
 end
 
 target 'nativeTemplate' do
