--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose"
   },
   "dependencies": {
-    "@mendix/native": "4.0.1",
+    "@mendix/native": "file:mendix-native-4.0.1.tgz",
     "@mendix/react-native-sqlite-storage": "^7.1.0",
     "@react-native-community/async-storage": "1.12.1",
     "@react-native-community/cameraroll": "4.0.1",
@@ -19,19 +19,19 @@
     "@react-native-firebase/messaging": "17.3.0",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/native": "6.1.6",
-    "react-native": "0.73.8",
+    "react-native": "0.75.4",
     "react-native-device-info": "11.1.0",
     "react-native-fast-image": "8.6.3",
-    "react-native-gesture-handler": "2.16.2",
+    "react-native-gesture-handler": "2.20.2",
     "react-native-image-picker": "5.0.1",
     "react-native-localize": "1.4.2",
-    "react-native-pager-view": "6.3.0",
+    "react-native-pager-view": "6.4.1",
     "react-native-permissions": "4.1.5",
     "react-native-push-notification": "8.1.1",
     "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "3.1.8",
     "react-native-schedule-exact-alarm-permission": "^0.1.3",
-    "react-native-screens": "3.29.0",
+    "react-native-screens": "3.35.0",
     "react-native-splash-screen": "3.2.0",
     "react-native-svg": "12.1.0",
     "react-native-tab-view": "3.5.1",
@@ -42,8 +42,8 @@
   "devDependencies": {
     "@babel/runtime": "^7.20.0",
     "@mendix/native-mobile-toolkit": "latest",
-    "@react-native/babel-preset": "^0.73.21",
-    "@react-native/metro-config": "^0.73.5",
+    "@react-native/babel-preset": "0.75.4",
+    "@react-native/metro-config": "0.75.4",
     "detox": "19.13.0",
     "jetifier": "^1.6.3",
     "patch-package": "^8.0.0"
@@ -54,14 +54,13 @@
   "overrides": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.8",
-    "@babel/traverse": "7.23.2",
+    "react-native": "0.75.4",
     "unset-value": "2.0.1",
     "semver": "5.7.2"
   },
   "resolutions": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.8"
+    "react-native": "0.75.4"
   }
 }
