--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-native": "0.75.4",
     "react-native-device-info": "13.0.0",
     "react-native-fast-image": "8.6.3",
-    "react-native-gesture-handler": "2.20.0",
+    "react-native-gesture-handler": "2.20.2",
     "react-native-image-picker": "5.0.1",
     "react-native-localize": "3.2.1",
     "react-native-pager-view": "6.4.1",
@@ -31,7 +31,7 @@
     "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "4.11.0",
     "react-native-schedule-exact-alarm-permission": "^0.1.3",
-    "react-native-screens": "3.34.0",
+    "react-native-screens": "3.35.0",
     "react-native-splash-screen": "3.2.0",
     "react-native-svg": "15.7.1",
     "react-native-tab-view": "3.5.2",
@@ -42,8 +42,8 @@
   "devDependencies": {
     "@babel/runtime": "^7.20.0",
     "@mendix/native-mobile-toolkit": "latest",
-    "@react-native/babel-preset": "^0.75.4",
-    "@react-native/metro-config": "^0.75.4",
+    "@react-native/babel-preset": "0.75.4",
+    "@react-native/metro-config": "0.75.4",
     "detox": "19.13.0",
     "jetifier": "^1.6.3",
     "patch-package": "^8.0.0"
@@ -55,7 +55,6 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.75.4",
-    "@babel/traverse": "7.23.2",
     "unset-value": "2.0.1",
     "semver": "5.7.2"
   },
