--- a/.github/workflows/linux-test-npm-installation-latest-node.yml
+++ b/.github/workflows/linux-test-npm-installation-latest-node.yml
@@ -14,6 +14,6 @@ jobs:
       - name: "Defining node version"
         uses: actions/setup-node@v3
         with:
-          node-version: 'latest'
+          node-version: '20'
       - name: "Install dependencies"
         run: npm install
