--- a/.github/workflows/linux-test-npm-installation-latest-node.yml
+++ b/.github/workflows/linux-test-npm-installation-latest-node.yml
@@ -16,4 +16,4 @@ jobs:
         with:
           node-version: '20'
       - name: "Install dependencies"
-        run: npm install
+        run: npm ci
