--- a/.mx/releases_list.json
+++ b/.mx/releases_list.json
@@ -1,53 +1,5 @@
 [
     {
-        "id": 186452714,
-        "tag_name": "v10.1.1-0",
-        "name": "Release 10.1.1-0",
-        "draft": true,
-        "prerelease": true,
-        "body": "* Merge pull request #901 from mendix/fix/rn-screens (d9060b1)",
-        "created_at": "2024-11-20T16:07:19Z",
-        "published_at": null,
-        "tarball_url": null,
-        "zipball_url": null
-    },
-    {
-        "id": 185633821,
-        "tag_name": "v10.1.0-0",
-        "name": "Release 10.1.0-0",
-        "draft": true,
-        "prerelease": true,
-        "body": "* Fix pipeline (7f82656)",
-        "created_at": "2024-11-15T13:35:15Z",
-        "published_at": null,
-        "tarball_url": null,
-        "zipball_url": null
-    },
-    {
-        "id": 185466957,
-        "tag_name": "v9.1.0",
-        "name": "Release 9.1.0",
-        "draft": true,
-        "prerelease": false,
-        "body": "* revert the version change (b773064)",
-        "created_at": "2024-11-14T16:19:38Z",
-        "published_at": null,
-        "tarball_url": null,
-        "zipball_url": null
-    },
-    {
-        "id": 185190223,
-        "tag_name": "v10.0.0-0",
-        "name": "Release 10.0.0-0",
-        "draft": true,
-        "prerelease": true,
-        "body": "* update readme (bfc0f92)",
-        "created_at": "2024-11-13T14:03:51Z",
-        "published_at": null,
-        "tarball_url": null,
-        "zipball_url": null
-    },
-    {
         "id": 176997936,
         "tag_name": "v9.2.0-0",
         "name": "Release 9.2.0-0",
@@ -55,18 +7,6 @@
         "prerelease": true,
         "body": "* chore: release v9.1.0-0 (c5a6abd)",
         "created_at": "2024-09-26T07:56:14Z",
-        "published_at": null,
-        "tarball_url": null,
-        "zipball_url": null
-    },
-    {
-        "id": 185184989,
-        "tag_name": "v9.1.0-0",
-        "name": "Release 9.1.0-0",
-        "draft": true,
-        "prerelease": true,
-        "body": "* Update package-lock (79af21a)",
-        "created_at": "2024-09-10T08:46:00Z",
         "published_at": null,
         "tarball_url": null,
         "zipball_url": null
@@ -101,7 +41,7 @@
         "name": "Release 7.0.19",
         "draft": false,
         "prerelease": false,
-        "body": "- We have updated react-native-permissions to version 3.6.1\r\n",
+        "body": "* Merge pull request #882 from mendix/update-changelog-and-version (5559a5c)",
         "created_at": "2024-10-01T08:57:00Z",
         "published_at": "2024-10-01T08:59:23Z",
         "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v7.0.19",
@@ -1198,5 +1138,65 @@
         "published_at": "2022-03-29T15:55:53Z",
         "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v6.2.16",
         "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v6.2.16"
+    },
+    {
+        "id": 63012502,
+        "tag_name": "v5.2.9",
+        "name": "Android video player full screen support",
+        "draft": false,
+        "prerelease": false,
+        "body": "### Improvements\r\n\r\n- Native Template now supports full-screen Android video. The full-screen icon can be found at the top of the video when the show control's property is set to `true`. When the icon is pressed the video will continue working on an overlay modal. (Ticket 135581)",
+        "created_at": "2022-03-29T08:38:19Z",
+        "published_at": "2022-03-29T08:47:13Z",
+        "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v5.2.9",
+        "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v5.2.9"
+    },
+    {
+        "id": 62589378,
+        "tag_name": "v6.2.15",
+        "name": "Fix custom developer apps failing to build on iOS",
+        "draft": false,
+        "prerelease": false,
+        "body": "### Fixes\r\n\r\n- We fixed an issue where iOS custom developer apps incurred problems while building.",
+        "created_at": "2022-03-23T15:14:20Z",
+        "published_at": "2022-03-23T15:16:00Z",
+        "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v6.2.15",
+        "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v6.2.15"
+    },
+    {
+        "id": 62100367,
+        "tag_name": "v6.2.14",
+        "name": "Various hotfixes",
+        "draft": false,
+        "prerelease": false,
+        "body": "### Description\r\nThis is a re-release of v6.2.13. We identified an issue when building an iOS app with Native Template v6.2.13 which we rectified with the release of v6.2.14.\r\n\r\n### Fixes\r\n* We fixed an issue where using `react-native-async-storage` made the iOS build fail due to duplicated symbols being generated.\r\n* We fixed an issue where compiling an Android app for release would fail when building on a Windows machine.",
+        "created_at": "2022-03-17T13:02:41Z",
+        "published_at": "2022-03-17T13:03:33Z",
+        "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v6.2.14",
+        "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v6.2.14"
+    },
+    {
+        "id": 62001041,
+        "tag_name": "v6.2.13",
+        "name": "[Retracted] Please update to v6.2.14",
+        "draft": false,
+        "prerelease": false,
+        "body": "### Retracted\r\nPlease ignore this update. If you already updated to v6.2.13 update to v6.2.14 to avoid failing iOS builds.",
+        "created_at": "2022-03-16T13:38:21Z",
+        "published_at": "2022-03-16T13:43:20Z",
+        "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v6.2.13",
+        "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v6.2.13"
+    },
+    {
+        "id": 57944859,
+        "tag_name": "v6.2.12",
+        "name": "Fix for the \"Navigate To\" action on Android 11+",
+        "draft": false,
+        "prerelease": false,
+        "body": "### Fixes\r\n\r\n- We identified and fixed an issue that would stop the \"Navigate To\" action from launching Google Maps on Android OS version 11 and later.",
+        "created_at": "2022-01-25T18:02:19Z",
+        "published_at": "2022-01-25T18:03:56Z",
+        "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v6.2.12",
+        "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v6.2.12"
     }
 ]
