--- a/ios/Config/config.xcconfig
+++ b/ios/Config/config.xcconfig
@@ -1,6 +1,7 @@
 BUNDLE_DISPLAY_NAME = NativeTemplate
 
-PRODUCT_BUNDLE_IDENTIFIER = com.mendix.native.template$(BUNDLE_IDENTIFIER_APPEND)
+BUNDLE_IDENTIFIER = com.mendix.native.template
+PRODUCT_BUNDLE_IDENTIFIER = $(BUNDLE_IDENTIFIER)$(BUNDLE_IDENTIFIER_APPEND)
 
 RUNTIME_URL = http:\/\/localhost:8080
 
