--- a/ios/Dev/Config/config.xcconfig
+++ b/ios/Dev/Config/config.xcconfig
@@ -2,7 +2,6 @@
 
 MAIN_STORY_BOARD = LaunchApp
 BUNDLE_DISPLAY_NAME = Dev - NativeTemplate
-BUNDLE_IDENTIFIER = com.mendix.native.template
-BUNDLE_IDENTIFIER_APPEND = .developerapp
+BUNDLE_IDENTIFIER_APPEND = com.mendix.native.template.developerapp
 
 PRODUCT_NAME = NativeTemplateDev
