--- a/ios/Podfile
+++ b/ios/Podfile
@@ -55,13 +55,15 @@ def common_pods
   # Third party dependencies of dependencies
   pod 'IQKeyboardManager'
 
+  # The pods listed in this section are essential for the application to function correctly.
+  # These pods are added by Native Builder UI (NBUI) and should not be modified under any circumstances.
+  # Do not make any changes to the pods in this section.
+  # REQUIRED PODS START
+
   # Required MendixNative dependency
   pod 'SSZipArchive'
 
-  # Required for Push notifications
-  pod 'Firebase', :modular_headers => true
-  pod 'FirebaseCore', :modular_headers => true
-  pod 'GoogleUtilities', :modular_headers => true
+  # REQUIRED PODS END
 end
 
 target 'nativeTemplate' do
