--- a/.github/workflows/android-build-custom-dev-app.yml
+++ b/.github/workflows/android-build-custom-dev-app.yml
@@ -24,8 +24,8 @@ jobs:
           node-version-file: '.nvmrc'
       - name: npm install
         run: npm ci
-      - name: Add NDK 21.4.7075529
-        run: echo "y" | ${ANDROID_HOME}/cmdline-tools/latest/bin/sdkmanager --install "ndk;21.4.7075529"
+      - name: Add NDK 23.1.7779620
+        run: echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;23.1.7779620"
       - name: Build with Gradle
         run: ./gradlew assembleDevDebug
         working-directory: ./android
