--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -22,3 +22,5 @@ org.gradle.configureondemand=true
 android.disableResourceValidation=true
 android.nonTransitiveRClass=true
 android.suppressUnsupportedCompileSdk=33
+# enabled by default in RN 0.76 so we need to disable it explicitly
+newArchEnabled=false
