--- a/package.json
+++ b/package.json
@@ -1,40 +1,43 @@
 {
   "name": "native-template",
-  "version": "12.0.1",
+  "version": "13.0.0",
   "private": true,
   "scripts": {
     "postinstall": "node patches/apply-patches.js && jetify",
     "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose"
   },
   "dependencies": {
-    "@mendix/native": "7.0.0",
-    "@op-engineering/op-sqlite": "9.1.2",
+    "@mendix/native": "./mendix-native-8.0.0.tgz",
+    "@op-engineering/op-sqlite": "9.2.7",
     "@react-native-async-storage/async-storage": "2.0.0",
     "@react-native-community/cameraroll": "4.0.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-masked-view/masked-view": "0.3.1",
     "@react-native-community/netinfo": "^11.3.2",
     "@react-native-community/push-notification-ios": "1.10.1",
-    "@react-native-picker/picker": "2.8.1",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "6.1.18",
     "react-native": "0.77.0",
+    "@react-native-community/cli": "16.0.2",
+    "@react-native-community/cli-platform-android": "16.0.2",
+    "@react-native-community/cli-platform-ios": "16.0.2",
     "react-native-device-info": "13.0.0",
     "react-native-fast-image": "8.6.3",
-    "react-native-gesture-handler": "2.20.2",
+    "react-native-gesture-handler": "2.22.1",
     "react-native-image-picker": "5.0.1",
     "react-native-localize": "3.2.1",
     "react-native-pager-view": "6.4.1",
     "react-native-permissions": "4.1.5",
     "react-native-push-notification": "8.1.1",
     "react-native-reanimated": "1.13.1",
-    "react-native-safe-area-context": "4.11.0",
+    "react-native-safe-area-context": "5.2.0",
     "react-native-schedule-exact-alarm-permission": "^0.1.3",
-    "react-native-screens": "3.29.0",
+    "react-native-screens": "4.6.0",
     "react-native-splash-screen": "3.2.0",
-    "react-native-svg": "15.7.1",
+    "react-native-svg": "15.11.1",
     "react-native-tab-view": "3.5.2",
     "react-native-vector-icons": "10.2.0",
-    "react-native-video": "6.4.5",
+    "react-native-video": "6.10.0",
     "semver": "5.7.2"
   },
   "devDependencies": {
@@ -43,7 +46,7 @@
     "@react-native/babel-preset": "0.77.0",
     "@react-native/metro-config": "0.77.0",
     "detox": "19.13.0",
-    "jetifier": "^1.6.3",
+    "jetifier": "^1.6.8",
     "patch-package": "^8.0.0"
   },
   "engines": {
