--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/push-notification-ios": "1.10.1",
     "@react-native-picker/picker": "2.8.1",
     "@react-navigation/native": "6.1.18",
+    "@gorhom/bottom-sheet": "^5.1.1",
     "react-native": "0.75.4",
     "react-native-device-info": "13.0.0",
     "react-native-fast-image": "8.6.3",
